cmake_minimum_required(VERSION 3.20)
project(Day04)

set(CMAKE_CXX_STANDARD 98)

#add_executable(Day04 ex00/main.cpp ex00/Animal.cpp ex00/Animal.hpp ex00/Dog.cpp ex00/Dog.hpp ex00/Cat.cpp ex00/Cat.hpp)

add_executable(Day04 ex01/main.cpp ex01/Animal.cpp ex01/Animal.hpp ex01/Dog.cpp ex01/Dog.hpp ex01/Cat.cpp ex01/Cat.hpp ex01/Brain.cpp ex01/Brain.hpp)
